--- a/kernel-config/release/general/config-6.1
+++ b/kernel-config/release/general/config-6.1
@@ -5656,7 +5656,7 @@ CONFIG_DRM_NOMODESET=y
 CONFIG_FB_CMDLINE=y
 CONFIG_FB_NOTIFY=y
 CONFIG_FB=y
-# CONFIG_FIRMWARE_EDID is not set
+CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_CFB_FILLRECT=y
 CONFIG_FB_CFB_COPYAREA=y
 CONFIG_FB_CFB_IMAGEBLIT=y
@@ -7249,7 +7249,7 @@ CONFIG_VIDEO_SUNXI_CEDRUS=m
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 CONFIG_FB_TFT=y
-CONFIG_FB_TFT_ST7735R=y
+CONFIG_FB_TFT_ST7735S=y
 # CONFIG_KS7010 is not set
 CONFIG_PI433=m
 # CONFIG_XIL_AXIS_FIFO is not set
