--- a/kernel-config/release/general/config-6.6
+++ b/kernel-config/release/general/config-6.6
@@ -7114,7 +7114,7 @@ CONFIG_VIDEO_SUN6I_ISP=m
 # CONFIG_STAGING_MEDIA_DEPRECATED is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
-CONFIG_FB_TFT=y
+CONFIG_FB_TFT=m
 # CONFIG_FB_TFT_AGM1264K_FL is not set
 # CONFIG_FB_TFT_BD663474 is not set
 # CONFIG_FB_TFT_HX8340BN is not set
@@ -7139,7 +7139,7 @@ CONFIG_FB_TFT=y
 # CONFIG_FB_TFT_SSD1306 is not set
 # CONFIG_FB_TFT_SSD1331 is not set
 # CONFIG_FB_TFT_SSD1351 is not set
-CONFIG_FB_TFT_ST7735S=y
+CONFIG_FB_TFT_ST7735S=m
 # CONFIG_FB_TFT_ST7789V is not set
 # CONFIG_FB_TFT_TINYLCD is not set
 # CONFIG_FB_TFT_TLS8204 is not set
