update flippy config

--- a/kernel-config/release/flippy/config-6.1
+++ b/kernel-config/release/flippy/config-6.1
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.93 Kernel Configuration
+# Linux/arm64 6.1.98 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Ubuntu clang version 14.0.0-1ubuntu1.1"
 CONFIG_GCC_VERSION=0
@@ -30,7 +30,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 # CONFIG_WERROR is not set
 # CONFIG_UAPI_HEADER_TEST is not set
-CONFIG_LOCALVERSION="-flippy-90+o"
+CONFIG_LOCALVERSION="-flippy-91+o"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
@@ -2453,6 +2453,8 @@ CONFIG_SATA_HOST=y
 CONFIG_PATA_TIMINGS=y
 CONFIG_ATA_VERBOSE_ERROR=y
 CONFIG_ATA_FORCE=y
+CONFIG_ARCH_WANT_LIBATA_LEDS=y
+CONFIG_ATA_LEDS=y
 CONFIG_ATA_ACPI=y
 # CONFIG_SATA_ZPODD is not set
 CONFIG_SATA_PMP=y
@@ -2833,6 +2835,7 @@ CONFIG_FIXED_PHY=y
 #
 # MII PHY device drivers
 #
+CONFIG_AIR_EN8811H_PHY=m
 # CONFIG_AMD_PHY is not set
 CONFIG_MESON_GXL_PHY=y
 # CONFIG_ADIN_PHY is not set
@@ -2865,7 +2868,11 @@ CONFIG_MOTORCOMM_PHY=y
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_NXP_C45_TJA11XX_PHY is not set
 # CONFIG_NXP_TJA11XX_PHY is not set
+CONFIG_QCOM_NET_PHYLIB=m
 # CONFIG_AT803X_PHY is not set
+CONFIG_QCA83XX_PHY=m
+CONFIG_QCA808X_PHY=m
+CONFIG_QCA807X_PHY=m
 # CONFIG_QSEMI_PHY is not set
 CONFIG_REALTEK_PHY=y
 # CONFIG_RENESAS_PHY is not set
@@ -2914,6 +2921,8 @@ CONFIG_MDIO_BUS_MUX_MMIOREG=y
 # PCS device drivers
 #
 CONFIG_PCS_XPCS=y
+CONFIG_PCS_MTK_USXGMII=m
+CONFIG_PCS_MTK_LYNXI=m
 # end of PCS device drivers
 
 CONFIG_PPP=m
@@ -6979,7 +6988,7 @@ CONFIG_FB_TFT=m
 # CONFIG_FB_TFT_SSD1306 is not set
 # CONFIG_FB_TFT_SSD1331 is not set
 # CONFIG_FB_TFT_SSD1351 is not set
-CONFIG_FB_TFT_ST7735R=m
+CONFIG_FB_TFT_ST7735S=m
 # CONFIG_FB_TFT_ST7789V is not set
 # CONFIG_FB_TFT_TINYLCD is not set
 # CONFIG_FB_TFT_TLS8204 is not set
@@ -8003,6 +8012,7 @@ CONFIG_DAX=y
 CONFIG_DEV_DAX=m
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
+CONFIG_NVMEM_LAYOUTS=y
 
 #
 # Layout Types
