--- a/kernel-config/release/flippy/config-6.6
+++ b/kernel-config/release/flippy/config-6.6
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.6.35 Kernel Configuration
+# Linux/arm64 6.6.39 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Ubuntu clang version 14.0.0-1ubuntu1.1"
 CONFIG_GCC_VERSION=0
@@ -30,7 +30,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
 # CONFIG_WERROR is not set
 # CONFIG_UAPI_HEADER_TEST is not set
-CONFIG_LOCALVERSION="-flippy-90+"
+CONFIG_LOCALVERSION="-flippy-91+"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
@@ -1857,6 +1857,7 @@ CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=m
+CONFIG_CFG80211_HEADERS=y
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 CONFIG_CFG80211_CERTIFICATION_ONUS=y
@@ -6439,6 +6440,7 @@ CONFIG_USB_SERIAL_AIRCABLE=m
 CONFIG_USB_SERIAL_ARK3116=m
 CONFIG_USB_SERIAL_BELKIN=m
 CONFIG_USB_SERIAL_CH341=y
+CONFIG_USB_SERIAL_CH348=m
 CONFIG_USB_SERIAL_WHITEHEAT=m
 CONFIG_USB_SERIAL_DIGI_ACCELEPORT=m
 CONFIG_USB_SERIAL_CP210X=y
@@ -7143,7 +7145,7 @@ CONFIG_FB_TFT=m
 # CONFIG_FB_TFT_SSD1306 is not set
 # CONFIG_FB_TFT_SSD1331 is not set
 # CONFIG_FB_TFT_SSD1351 is not set
-CONFIG_FB_TFT_ST7735R=m
+CONFIG_FB_TFT_ST7735S=m
 # CONFIG_FB_TFT_ST7789V is not set
 # CONFIG_FB_TFT_TINYLCD is not set
 # CONFIG_FB_TFT_TLS8204 is not set
