--- a/kernel-config/release/general/config-6.1
+++ b/kernel-config/release/general/config-6.1
@@ -7254,6 +7254,7 @@ CONFIG_VIDEO_SUNXI_CEDRUS=m
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 CONFIG_FB_TFT=m
+CONFIG_FB_TFT_HX8347D=m
 CONFIG_FB_TFT_ST7735S=m
 # CONFIG_KS7010 is not set
 CONFIG_PI433=m
