--- a/kernel-config/release/flippy/config-6.1
+++ b/kernel-config/release/flippy/config-6.1
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.98 Kernel Configuration
+# Linux/arm64 6.1.99 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Ubuntu clang version 14.0.0-1ubuntu1.1"
 CONFIG_GCC_VERSION=0
@@ -2771,6 +2771,26 @@ CONFIG_R8125_PTP_MASTER_MODE=y
 CONFIG_R8125_USE_FIRMWARE_FILE=y
 # CONFIG_R8125_DOUBLE_VLAN is not set
 # CONFIG_R8125_PAGE_REUSE is not set
+CONFIG_R8126=m
+CONFIG_R8126_SOC_LAN=y
+# CONFIG_R8126_REALWOW_SUPPORT is not set
+# CONFIG_R8126_DASH_SUPPORT is not set
+# CONFIG_R8126_DOWN_SPEED_100 is not set
+# CONFIG_R8126_ASPM is not set
+CONFIG_R8126_WOL_SUPPORT=y
+CONFIG_R8126_S5WOL=y
+# CONFIG_R8126_S5_KEEP_CURR_MAC is not set
+# CONFIG_R8126_EEE is not set
+# CONFIG_R8126_S0_MAGIC_PACKET is not set
+CONFIG_R8126_TX_NO_CLOSE=y
+CONFIG_R8126_MULTI_MSIX_VECTOR=y
+CONFIG_R8126_MULTIPLE_TX_QUEUE=y
+CONFIG_R8126_RSS_SUPPORT=y
+CONFIG_R8126_PTP_SUPPORT=y
+CONFIG_R8126_PTP_MASTER_MODE=y
+CONFIG_R8126_USE_FIRMWARE_FILE=y
+# CONFIG_R8126_DOUBLE_VLAN is not set
+# CONFIG_R8126_PAGE_REUSE is not set
 CONFIG_R8168=m
 # CONFIG_R8168_SOC_LAN is not set
 # CONFIG_R8168_FIBER_SUPPORT is not set
