--- a/kernel-config/release/flippy/config-6.1
+++ b/kernel-config/release/flippy/config-6.1
@@ -1,16 +1,16 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.100 Kernel Configuration
+# Linux/arm64 6.1.102 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="Ubuntu clang version 14.0.0-1ubuntu1.1"
+CONFIG_CC_VERSION_TEXT="Ubuntu clang version 18.1.3 (1ubuntu1)"
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
-CONFIG_CLANG_VERSION=140000
+CONFIG_CLANG_VERSION=180103
 CONFIG_AS_IS_LLVM=y
-CONFIG_AS_VERSION=140000
+CONFIG_AS_VERSION=180103
 CONFIG_LD_VERSION=0
 CONFIG_LD_IS_LLD=y
-CONFIG_LLD_VERSION=140000
+CONFIG_LLD_VERSION=180103
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
@@ -3314,7 +3314,14 @@ CONFIG_IEEE802154_HWSIM=m
 #
 # Wireless WAN
 #
-# CONFIG_WWAN is not set
+CONFIG_WWAN=m
+CONFIG_WWAN_DEBUGFS=y
+CONFIG_WWAN_HWSIM=m
+CONFIG_MHI_WWAN_CTRL=m
+CONFIG_MHI_WWAN_MBIM=m
+CONFIG_RPMSG_WWAN_CTRL=m
+CONFIG_IOSM=m
+CONFIG_MTK_T7XX=m
 # end of Wireless WAN
 
 CONFIG_VMXNET3=m
